--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,15 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: arunkant.com
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+# description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Some Person
+author: arunkant
 
 # --- List of links in the navigation bar --- #
-
-navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
@@ -39,9 +32,8 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  github: arunkant
+  twitter: arunkants
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
@@ -66,13 +58,13 @@ social-network-links:
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  facebook: false
   linkedin: true
   vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "www.arunkant.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -107,7 +99,7 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: ""
 
 # Google Tag Manager ID
 #gtm: ""
@@ -185,8 +177,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      comments: false  # add comments to all blog posts
+      social-share: false # add social media sharing buttons to all blog posts
       readtime: false # add estimated reading time on all blog posts
   -
     scope:
@@ -209,6 +201,3 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
